@@ -31,6 +31,7 @@
 char* calc_broadcast(char* IP, char* mask);
 char*  calc_network(char*  IP,char*  mask);
 short calc_cidr(char* mask);
+char* calc_mask_from_cidr(char* cidr);
 unsigned short is_valid_mask(char* mask);
 // Not used for now
 unsigned int calc_num_broadcast(unsigned int IP,unsigned int mask);
