@@ -57,3 +57,5 @@ Alpha 0.9
 
 Alpha 0.10 - prev
 - Use DHClient only when interface is up
+- Save Interface configuration in system when command save is done
+- Implement function to calculate str netmask by cidr
